# TinyWebServer

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: blockdeque.h  buffer.h  epoller.h  httpconn.h  httprequest.h  httpresponse.h  log.h  sqlconnRAII.h  sqlconnpool.h  threadpool.h  timer.h  webserver.h
resources/: 400.html  403.html  404.html  error.html  index.html  login.html  picture.html  register.html  video.html  welcome.html
srcs/: buffer-e.cpp  buffer.cpp  epoller.cpp  httpconn.cpp  httprequest.cpp  httpresponse.cpp  log.cpp  main.cpp  sqlconnpool.cpp  timer.cpp  webserver.cpp
